livrables/04_Fichiers_deploiement/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mediapulse
  labels:
    app: mediapulse
    environment: production
